# Catalyst

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: graph.py  health.py  parser.py  prediction.py  simulation.py  telemetry.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py  security.py  settings.py
backend/app/database/mongodb/: __init__.py  client.py  session.py
backend/app/database/neo4j/: driver.py
backend/app/database/postgres/: engine.py  session.py
backend/app/database/redis/: client.py
backend/app/database/repositories/: base.py
backend/app/modules/graph/: README.md
backend/app/modules/optimization/: README.md
backend/app/modules/parser/: README.md
backend/app/modules/prediction/: README.md
backend/app/modules/simulation/: README.md
backend/app/modules/telemetry/: README.md
backend/app/shared/enums/: language.py  status.py
backend/app/workers/: celery_app.py  graph_worker.py  parser_worker.py  prediction_worker.py  simulation_worker.py  telemetry_worker.py
benchmarks/: README.md
datasets/: README.md
docs/architecture/: dev-guide.md  system-overview.md
docs/decisions/: ADR-001-layered-architecture.md
docs/milestones/: roadmap.md
docs/vision/: product-vision.md
experiments/: README.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/app/: main.tsx  router.tsx
frontend/src/hooks/: useGraph.ts  usePrediction.ts  useRepository.ts  useSimulation.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: Dashboard.tsx  Graph.tsx  NotFound.tsx  Prediction.tsx  Repository.tsx  Simulation.tsx
frontend/src/services/: api.ts  graph.service.ts  parser.service.ts  prediction.service.ts  simulation.service.ts
frontend/src/store/: graph.store.ts  index.ts  repository.store.ts  simulation.store.ts
infrastructure/: README.md
research/: README.md
tools/: README.md
(+25 files in other folders)
